# zmk

./: .clang-format  .codespellignorewords  .codespellrc  .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitlint  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .release-please-manifest.json  1.sh  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Kconfig  LICENSE  Makefile  README-NIX.md  README.md  VERSION  build.sh  build.yaml  default.nix  docker-compose.yml  flake.nix  hid.h  how_to.txt  k.sh  k.sh.txt  mouse.h  netlify.toml  (+12 more)
app/: .gitignore  .prettierrc.js  CMakeLists.txt  Kconfig  Kconfig.behaviors  Kconfig.combos  Kconfig.defaults  VERSION  build.sh  build_left.bat  build_right.bat  config  core-coverage.yml  flash.bat  kitware-archive.sh  left.uf2  package-lock.json  package.json  prj.conf  right.uf2  run-ble-test.sh  run-test-debug.sh  run-test.sh  test_zmk.py  west.yml
app/boards/: 01space_rp2040_042lcd.conf  Kconfig  adafruit_kb2040.overlay  adafruit_metro_rp2040.conf  adafruit_qt_py_rp2040.conf  adafruit_qt_py_rp2040.overlay  aliases.cmake  blackpill_f401cc.overlay  blackpill_f401ce.conf  blackpill_f411ce.conf  blackpill_f411ce.overlay  boardsource_blok.overlay  native_posix.conf  native_posix.overlay  native_posix_64.conf  native_posix_64.overlay  native_posix_shell_test_extra.conf  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.keymap  nrf52840dk_nrf52840.overlay  nrf52840dongle_nrf52840.conf  nrf52_bsim.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay  post_boards_shields.cmake  rpi_pico.conf  rpi_pico.overlay  seeeduino_xiao.overlay  seeeduino_xiao_ble.conf  seeeduino_xiao_ble.overlay  seeeduino_xiao_ble_nrf52840_sense.conf  seeeduino_xiao_rp2040.conf  seeeduino_xiao_rp2040.overlay  sparkfun_pro_micro_rp2040.conf  sparkfun_pro_micro_rp2040.overlay  usb_console.dtsi  xiao_ble.conf  xiao_ble.overlay  xiao_rp2040.overlay
app/boards/arm/: Retic1337_BTCTRL.rar
app/boards/shields/: Kconfig.defconfig  Kconfig.shield  cradios_right.overlay
app/cmake/: ZephyrBuildConfig.cmake  keymap.cmake  zmk_config.cmake
app/drivers/: CMakeLists.txt  Kconfig
app/drivers/animation/: CMakeLists.txt  Kconfig  solid_color.c
app/drivers/display/: CMakeLists.txt  Kconfig  Kconfig.il0323  il0323.c  il0323_regs.h
app/drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.165  Kconfig.595  Kconfig.max7318  Kconfig.mcp23017  gpio_165.c  gpio_595.c  gpio_max7318.c  gpio_mcp23017.c  gpio_mcp23017.h
app/drivers/kscan/: CMakeLists.txt  Kconfig  debounce.h  kscan_composite.c  kscan_deghost.c  kscan_gpio_demux.c  kscan_gpio_direct.c  kscan_gpio_matrix.c  kscan_gpio_multiplex.c  kscan_gpio_round_robin.c  kscan_gpio_round_robin_matrix.c  kscan_mock.c
app/drivers/led/: CMakeLists.txt  Kconfig
app/drivers/led_strip/: CMakeLists.txt  Kconfig  Kconfig.ckled2001  Kconfig.composite  ckled2001.c  led_strip_composite.c
app/drivers/sensor/: CMakeLists.txt  Kconfig
app/drivers/zephyr/: CMakeLists.txt  Kconfig  battery_voltage_divider.c  ec11.c  ec11.h  ec11_trigger.c  en11.c  en11.h  en11_trigger.c  kscan_gpio.c  kscan_gpio_demux.c  kscan_gpio_direct.c  kscan_gpio_matrix.c  module.yml
app/dts/: animation.dtsi  behaviors.dtsi  physical_layouts.dtsi
app/dts/behaviors/: animation.dtsi  backlight.dtsi  backspace_delete.dtsi  base_layer.dtsi  bluetooth.dtsi  caps_word.dtsi  capslock.dtsi  character_map.dtsi  combo_kp.dtsi  combos.dtsi  custom_lock.dtsi  default_layer.dtsi  dynamic_macro.dtsi  dynamic_nkro.dtsi  endpoints.dtsi  ext_power.dtsi  gresc.dtsi  hid.dtsi  homerow_tap.dtsi  indicators.dtsi  key_press.dtsi  key_repeat.dtsi  key_tap.dtsi  key_toggle.dtsi  keymap.dtsi  last_device.dtsi  layer_lock.dtsi  layer_tap.dtsi  leader_key.dtsi  led_map.dtsi  macros.dtsi  midi_key_press.dtsi  mod_morph.dtsi  mod_tap.dtsi  momentary_layer.dtsi  momentary_layer_lock.dtsi  mouse_key_press.dtsi  mouse_keys.dtsi  mouse_move.dtsi  mouse_scroll.dtsi  (+32 more)
app/dts/bindings/: vendor-prefixes.txt  zmk,animation-pixel.yaml  zmk,animation.yaml  zmk,backlight-map.yaml  zmk,battery-reporting.yaml  zmk,behavior-key-scanned.yaml  zmk,behavior-key.yaml  zmk,boot-magic-combo.yaml  zmk,boot-magic-key.yaml  zmk,bt-unpair-combo.yaml  zmk,character-map.yaml  zmk,combo-partial-hold-position.yaml  zmk,combos.yaml  zmk,conditional-layers.yaml  zmk,dev-pm-policy.yaml  zmk,ext-power-generic.yaml  zmk,global-bindings.yaml  zmk,gpio-key-behavior-trigger.yaml  zmk,gpio-key-wakeup-trigger.yaml  zmk,gpio-scanned-key-behavior-trigger.yaml  zmk,input-configs.yaml  zmk,input-listener.yaml  zmk,input-split.yaml  zmk,key-physical-attrs.yaml  zmk,keymap-sensors.yaml  zmk,keymap-transform.yaml  zmk,keymap.yaml  zmk,kscan-composite.yaml  zmk,kscan-deghost.yaml  zmk,kscan-mock.yaml  zmk,layers.yaml  zmk,leader-sequences.yaml  zmk,matrix-transform.yaml  zmk,multi-layers.yaml  zmk,physical-layout-position-map.yaml  zmk,physical-layout.yaml  zmk,soft-off-wakeup-sources.yaml  zmk,soft-on-off-gpio.yaml  zmk,underglow-indicators.yaml  zmk,underglow-layer.yaml  (+3 more)
app/dts/common/: arduino_uno_pro_micro_map.dtsi  rp2-boot-mode-retention.dtsi
app/include/: derivative_rev_a_led_map.h
app/module/: CMakeLists.txt  Kconfig
app/scripts/: gen_interrupt_priority_overrides.py  requirements.txt  west-commands.yml
app/src/: activity.c  backlight.c  battery.c  battery_reporting.c  battery_split.c  behavior.c  behavior_key.c  behavior_key_scanned.c  behavior_queue.c  ble.c  ble_unpair_combo.c  boot_magic_combo.c  boot_magic_key.c  caps_word.c  character_map.c  combo.c  combos_cmd.c  conditional_layer.c  dev_pm_policy.c  display.c  dynamic_macros.c  endpoints.c  event_manager.c  events.c  ext_power_generic.c  ext_power_usb_only.c  gpio_key_behavior_trigger.c  gpio_key_wakeup_trigger.c  gpio_scanned_key_behavior_trigger.c  hid.c  hid_dynamic_nkro.c  hid_indicators.c  hid_listener.c  hog.c  input_sideband_behaviors.c  keymap.c  kscan.c  kscan_composite.c  kscan_mock.c  kscan_sideband_behaviors.c  (+33 more)
app/tests/: Creating Tests.md
(+5450 files in other folders)
